data/usersCode/sdfsdf/question1/error.txt
/home/gauravghati/clash2/data/usersCode/sdfsdf/question1/code1-0.cpp:1:1: error: ‘vsdfsdf’ does not name a type
 vsdfsdf adfasd asd asd
 ^~~~~~~
